Adding `npm run dev`

--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "dev": "react-scripts start",
+    "start": "npm run build && serve -s build",
     "build": "react-scripts build",
     "eject": "react-scripts eject"
   },
